# Lolicore

./: .gitignore  README.md  continuous_tpu_stress.py  export_onnx.py  gradient_debug.py  inference.py  pyproject.toml  requirements.txt  router_test.py  run_tpu_stress.sh  test.py  test_attention.py  test_attention_real_world.py  test_generation.py  test_moe.py  testmoe.py  tpu_stress_test.py  train.py  train.sh  transformer.py
